labs/lesson_29/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab27-web
  namespace: lab27
  labels:
    app: lab27-web
    tier: frontend
spec:
  replicas: 1
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 1
#      maxSurge: 0
  selector:
    matchLabels:
      app: lab27-web
  template:
    metadata:
      labels:
        app: lab27-web
        tier: frontend
        service: labweb
        env: lab
    spec:
      containers:
        - name: web
          image: ghcr.io/vlrrbn/lab25-web-workflows:sha-4fbb245
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
